@@ -65,7 +65,7 @@ if test "$ac_cv_search_socket" = "no"; then
   AC_MSG_FAILURE([cannot find SOCKET library])
 fi
 AC_CHECK_FUNCS(socketpair sockatmark recvmsg sendmsg htonl htons ntohl ntohs dnl
-readv writev getnameinfo getaddrinfo freeaddrinfo dnl
+readv writev getnameinfo getaddrinfo freeaddrinfo gai_strerror dnl
 endprotoent getprotobyname getprotobynumber getprotoent setprotoent dnl
 endnetent getnetbyaddr getnetbyname getnetent setnetent)
 dnl AC_CHECK_FUNCS(inet_pton inet_ntop inet_addr inet_ntoa)
