@@ -185,6 +185,14 @@ Sockets are represented by their &fixnum-t; &file-des;s.</para>
 
 </section>
 
+<section id="rawsock-errors"><title>Errors</title>
+<para>Errors in <function role="unix">getaddrinfo</function>
+ and <function role="unix">getnameinfo</function> are &signal;ed
+ as &condition-t;s of type <type>RAWSOCK:EAI</type>
+ using <function role="unix">gai_strerror</function>.</para>
+<para>Errors in other functions are reported as the usual OS errors.</para>
+</section>
+
 <section id="rawsock-high-level"><title>High-Level Functions</title>
 <variablelist id="rawsock-high-level-list"><title>Functions that do not
   correspond to a single system call</title>
