@@ -1,5 +1,13 @@
 2006-06-29  Sam Steingold  <sds@podval.org>
 
+	use gai_strerror() to signal errors in getaddrinfo() and getnameinfo()
+	* modules/rawsock/rawsock.c (error_eai): new function
+	(RAWSOCK::GETNAMEINFO, RAWSOCK::GETADDRINFO): use it
+	* modules/rawsock/sock.lisp (eai): new condition type
+	* modules/rawsock/configure.in: check for gai_strerror()
+
+2006-06-29  Sam Steingold  <sds@podval.org>
+
 	* modules/syscalls/calls.c (POSIX::GROUP-INFO, POSIX::USER-INFO):
 	set errno to 0 before system calls to separate errors from "not found"
 
